# gh-project-tracker

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_basic.py  test_minimal.py  test_tui.py
.claude/: README.md
.claude/commands/: add-feature.md  create-template.md  debug-api-issues.md  fix-textual-error.md  fix-yaml-corruption.md
.claude/config/: project.json  workflows.json
.claude/hooks/: post-edit.sh  pre-commit.sh
.claude/scripts/: clear-cache.sh  test-github-api.py  validate-yaml.py
.claude/subagents/: github-api-specialist.md  textual-expert.md  yaml-specialist.md
.claude/templates/: bug-report.md  feature-task.md  pr-description.md
github_issue_tracker/: __init__.py  cli.py  disk_cache.py  filter_config.py  gh_cli.py  github_client.py  logging_config.py  models.py  simple_logger.py  template_selector.py  tui.py
templates/: comfy-subgraph.yaml  vue-nodes.yaml
